--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,18 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/oslynx/Documents/symfonyProjectb2/partielb2-s1/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/home/oslynx/Documents/symfonyProjectb2/partielb2-s1/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+    <h2>Documentation de l'API sur /doc</h2>
+    <a href="/doc">documentation de l'api</a>
 {% endblock %}
